// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Image snapshot > Image demo snapshot 0 1`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap;"
  >
    <div
      class="bui-image"
      style="width: 100px; height: 100px;"
    >
      <img
        alt=""
        class="bui-image-img bui-image-loaded"
        loading="eager"
        src="https://gw.alicdn.com/i2/O1CN01D7yqW229UZMB5eh00_!!6000000008071-0-alipicbeacon.jpg"
        style="object-fit: fill;"
      />
    </div>
  </div>
</div>
`;

exports[`Image snapshot > Image demo snapshot 0 2`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: row; --spacing: 8px; --flex-wrap: wrap;"
  >
    <div
      class="bui-image"
      style="width: 100px; height: 100px;"
    >
      <img
        alt="contain"
        class="bui-image-img bui-image-loaded"
        loading="eager"
        src="https://gw.alicdn.com/i2/O1CN01D7yqW229UZMB5eh00_!!6000000008071-0-alipicbeacon.jpg"
        style="object-fit: contain;"
      />
    </div>
    <div
      class="bui-image"
      style="width: 100px; height: 100px;"
    >
      <img
        alt="cover"
        class="bui-image-img bui-image-loaded"
        loading="eager"
        src="https://gw.alicdn.com/i2/O1CN01D7yqW229UZMB5eh00_!!6000000008071-0-alipicbeacon.jpg"
        style="object-fit: cover;"
      />
    </div>
    <div
      class="bui-image"
      style="width: 100px; height: 100px;"
    >
      <img
        alt="fill"
        class="bui-image-img bui-image-loaded"
        loading="eager"
        src="https://gw.alicdn.com/i2/O1CN01D7yqW229UZMB5eh00_!!6000000008071-0-alipicbeacon.jpg"
        style="object-fit: fill;"
      />
    </div>
    <div
      class="bui-image"
      style="width: 100px; height: 100px;"
    >
      <img
        alt="none"
        class="bui-image-img bui-image-loaded"
        loading="eager"
        src="https://gw.alicdn.com/i2/O1CN01D7yqW229UZMB5eh00_!!6000000008071-0-alipicbeacon.jpg"
        style="object-fit: none;"
      />
    </div>
    <div
      class="bui-image"
      style="width: 100px; height: 100px;"
    >
      <img
        alt="scale-down"
        class="bui-image-img bui-image-loaded"
        loading="eager"
        src="https://gw.alicdn.com/i2/O1CN01D7yqW229UZMB5eh00_!!6000000008071-0-alipicbeacon.jpg"
        style="object-fit: scale-down;"
      />
    </div>
  </div>
</div>
`;

exports[`Image snapshot > Image demo snapshot 0 3`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: row; --spacing: 8px; --flex-wrap: nowrap;"
  >
    <div
      class="bui-image"
      style="width: 100px; height: 100px; border-radius: 4px;"
    >
      <img
        alt=""
        class="bui-image-img bui-image-loaded"
        loading="eager"
        src="https://gw.alicdn.com/i2/O1CN01D7yqW229UZMB5eh00_!!6000000008071-0-alipicbeacon.jpg"
        style="object-fit: cover;"
      />
    </div>
    <div
      class="bui-image"
      style="width: 100px; height: 100px; border-radius: 8px;"
    >
      <img
        alt=""
        class="bui-image-img bui-image-loaded"
        loading="eager"
        src="https://gw.alicdn.com/i2/O1CN01D7yqW229UZMB5eh00_!!6000000008071-0-alipicbeacon.jpg"
        style="object-fit: cover;"
      />
    </div>
    <div
      class="bui-image"
      style="width: 100px; height: 100px; border-radius: 32px;"
    >
      <img
        alt=""
        class="bui-image-img bui-image-loaded"
        loading="eager"
        src="https://gw.alicdn.com/i2/O1CN01D7yqW229UZMB5eh00_!!6000000008071-0-alipicbeacon.jpg"
        style="object-fit: cover;"
      />
    </div>
  </div>
</div>
`;

exports[`Image snapshot > Image demo snapshot 0 4`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: row; --spacing: 8px; --flex-wrap: nowrap;"
  >
    <div
      class="bui-image"
      style="width: 100px; height: 100px; border-radius: 4px;"
    >
      <div
        aria-hidden="true"
        class="bui-image-default-icon-wrap default-holder"
      />
      <img
        alt=""
        class="bui-image-img"
        loading="eager"
        src="https://localhost:3000/failed"
        style="object-fit: cover;"
      />
    </div>
    <div
      class="bui-image"
      style="width: 100px; height: 100px; border-radius: 4px;"
    >
      <img
        alt=""
        class="bui-image-img bui-image-loaded"
        loading="eager"
        src="https://localhost:3000/failed"
        style="object-fit: cover;"
      />
    </div>
    <div
      class="bui-image"
      style="height: 100px; border-radius: 4px;"
    >
      <img
        alt=""
        class="bui-image-img bui-image-loaded"
        loading="eager"
        src="https://localhost:3000/failed"
        style="object-fit: fill;"
      />
    </div>
  </div>
</div>
`;

exports[`Image snapshot > Image demo snapshot 0 5`] = `
<div>
  <button
    class="bui-btn bui-btn-outlined bui-btn-medium"
    type="button"
  >
    重新加载
  </button>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: row; --spacing: 8px; --flex-wrap: nowrap;"
  >
    <div
      class="bui-image"
      style="width: 100px; height: 100px;"
    >
      <img
        alt=""
        class="bui-image-img bui-image-loaded"
        loading="eager"
        src="https://gw.alicdn.com/i2/O1CN01D7yqW229UZMB5eh00_!!6000000008071-0-alipicbeacon.jpg?t=0"
        style="object-fit: fill;"
      />
    </div>
    <div
      class="bui-image"
      style="width: 100px; height: 100px;"
    >
      <div
        aria-hidden="true"
        class="bui-image-default-icon-wrap default-holder"
      />
      <img
        alt=""
        class="bui-image-img"
        loading="eager"
        src="https://gw.alicdn.com/i2/O1CN01D7yqW229UZMB5eh00_!!6000000008071-0-alipicbeacon.jpg?t=0"
        style="object-fit: fill;"
      />
    </div>
    <div
      class="bui-image"
      style="width: 100px; height: 100px;"
    >
      <div
        aria-hidden="true"
        class="bui-image-default-icon-wrap"
      >
        <div
          style="background: red; width: 100%; height: 100%;"
        />
      </div>
      <img
        alt=""
        class="bui-image-img"
        loading="eager"
        src="https://gw.alicdn.com/i2/O1CN01D7yqW229UZMB5eh00_!!6000000008071-0-alipicbeacon.jpg?t=0"
        style="object-fit: fill;"
      />
    </div>
  </div>
</div>
`;
